--- a/Bloc de notas de trabajo (INFORMÁTICA ALHAURÍN)/login.html
+++ b/Bloc de notas de trabajo (INFORMÁTICA ALHAURÍN)/login.html
@@ -21,7 +21,7 @@
                         <input type="password" class="form-control" id="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Entrar</button>
-                    <a href="registro.html" class="btn btn-link w-100">Crear una nueva cuenta</a>
+                    <a href="index.html" class="btn btn-link w-100">Crear una nueva cuenta</a>
                 </form>
             </div>
         </div>
